--- a/src/DnD/dnd.css
+++ b/src/DnD/dnd.css
@@ -1,9 +1,10 @@
 .drag-component {
 	display: flex;
-	gap: "16px";
-	padding: "16px";
-	align-items: center;
+	position: relative;
+	width: 100vw;
+	height: 100vh;
 	flex-direction: column;
+	background-color: rebeccapurple;
 }
 
 .draggable-item {
@@ -33,6 +34,7 @@
 	justify-content: center;
 	position: relative;
 	background-color: #fff;
+	margin: auto;
 	transition: background-color 0.2s;
 }
 
